Added config test files just for discussion

--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -15,6 +15,7 @@
   <discovery-root></discovery-root>
   <script src="assets/uswds/js/uswds.min.js"></script>
   <script src="assets/js/autocomplete.js"></script>
+  <script src="assets/js/config.js"></script>
 </body>
 
 </html>
