--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -15,7 +15,9 @@
   <discovery-root></discovery-root>
   <script src="assets/uswds/js/uswds.min.js"></script>
   <script src="assets/js/autocomplete.js"></script>
-  <script src="assets/js/config.js"></script>
+  <script>
+    API_HOST = 'http://localhost:8080';
+  </script>
 </body>
 
 </html>
